--- a/templates/flows/flow_launch.haml
+++ b/templates/flows/flow_launch.haml
@@ -126,8 +126,8 @@
     .field.start-type.l-immediately
       - render_field 'start_type'
 
-    .field.omnibox.l-immediately.l-schedule
-      - render_field 'omnibox'
+    -#.field.omnibox.l-immediately.l-schedule
+    -#  - render_field 'omnibox'
 
     .field.contact-query.l-immediately
       - render_field 'contact_query'
