--- a/templates/contacts/contact_invite_participants.haml
+++ b/templates/contacts/contact_invite_participants.haml
@@ -189,7 +189,7 @@
 
 -block post-content
   - if org_perms.msgs.broadcast_send and not reply_disabled
-    - include "msgs/msg_send_modal.haml"
+    -#- include "msgs/msg_send_modal.haml"
 
   -if org_perms.contacts.contact_delete
     .contact-deletion.hide
