--- a/templates/orgs/org_accounts.haml
+++ b/templates/orgs/org_accounts.haml
@@ -20,5 +20,5 @@
       allow anybody with that password to join your workspace as a surveyor.
 
 -block summary
-  -trans "You workspace has"
+  -trans "Your workspace has"
   {% for role in role_summary %}{{ role }}{{ forloop|oxford }}{% endfor %}.
