--- a/templates/includes/pagination.haml
+++ b/templates/includes/pagination.haml
@@ -1,4 +1,4 @@
--if object_list.count
+-if object_list
   .flex.flex-wrap.mx-4.mt-3
     .text-gray-700
       -include "includes/results_count.html"
