--- a/templates/contacts/contact_filter.haml
+++ b/templates/contacts/contact_filter.haml
@@ -4,8 +4,10 @@
 
 -block title
   {{current_group.name}}
+
 -block subtitle
   -if current_group.is_dynamic
+    .font-mono.text-sm
+      {{ current_group.query }}
     .hidden.lbl-secondary.linked{onclick:"goto(event)", href:"{% url 'contacts.contact_filter' current_group.uuid %}"}
       -trans "Smart Group"
-
