--- a/templates/links/link_list.haml
+++ b/templates/links/link_list.haml
@@ -10,72 +10,84 @@
   -trans "Trackable Links"
 
 -block page-top
-  {% render as page_top %}
-    {{block.super}}
-  {% endrender %}
-  -if org_has_links
-    {{page_top}}
-
--block top-form
-  - if view.search_fields
-    - block search-form
-      %form
-        %input.input-medium.search-query{type:'text', placeholder:'{% trans "Search" %}', name:"search", value:"{{search}}"}
-        -if request.REQUEST.status
-          %input{type:'hidden', name:'status', value:'{{request.REQUEST.status}}'}
 
 -block content
 
   #pjax
     -block pjax
-      .row-fluid
-        .span3.sidebox
-          %div{style:"margin-bottom: 10px"}
-            - if org_perms.links.link_create
-              %a.btn.btn-primary.btn-block.create_link.new-link{href:"#"}
+      .lp-frame
+
+        .left
+          - if org_perms.links.link_create
+            %temba-modax#create-label-modal(header='{% trans "Create Trackable Link" %}' endpoint="{% url 'links.link_create' %}")
+              .button-primary.block
                 -trans "Create Trackable Link"
 
-          #sidebar-nav
-            %ul.nav.nav-list.level1
-              %li.nav-header
-                -trans "Links"
-              - for folder in folders
-                %li{'class':"{% if folder.url == request_url %}active{% endif %}" }
-                  %a{'href':'{{folder.url}}'}
-                    {{ folder.label }} ({{ folder.count }})
+          .lp-nav.lower
+            .font-normal.uppercase.text-xs.text-gray-500.pb-1
+              -trans "Links"
+            .inner-scroll
+              -for folder in folders
+                .lp-nav-item(class="{% if request.get_full_path == folder.url %}font-normal{% endif %}")
+                  .name(onclick="goto(event)" href='{{folder.url}}')
+                    {{folder.label}}
+                  .count(onclick="goto(event)" href='{{folder.url}}')
+                    {{ folder.count | intcomma }}
 
-        -block link-list
-          .span9
-            - block buttons
-              .pull-right
-                -block buttons-right
+        .right
+          -block link-list
+            .flex.w-full.mb-4.items-end.flex-wrap.justify-end.-mt-2(style="min-height:41px")
+              -block action-buttons
+                .list-buttons-container.h-full.mr-2.mt-2.flex-grow
+                  .list-buttons.flex.items-center.-mx-2.h-full
 
-              .list-buttons-container
-                .list-buttons
+                    - if 'restore' in actions and org_perms.links.link_update
+                      .button-action.object-btn-restore
+                        .-mt-1.mr-2.glyph.icon-checkmark
+                        -trans "Activate"
 
-                  - if 'restore' in actions and org_perms.links.link_update
-                    %span.btn-group
-                      %a.object-btn-restore{href:'#'}
-                        %button.btn{data-toggle:'tooltip', data-trigger:'hover', data-delay:"800", data-placement:'top', data-original-title:'{% trans "Activate" %}'}
-                          .glyph.icon-easy
+                    - if 'archive' in actions and org_perms.links.link_update
+                      .button-action.object-btn-archive
+                        .-mt-1.mr-2.glyph.icon-box
+                        -trans "Archive"
 
-                  - if 'archive' in actions and org_perms.links.link_update
-                    %span.btn-group
-                      %a.object-btn-archive{href:'#'}
-                        %button.btn{data-toggle:'tooltip', data-trigger:'hover', data-delay:"800", data-placement:'top', data-original-title:'{% trans "Archive" %}'}
-                          .glyph.icon-box
+                .flex-grow.ml-1.self-end.items-end
+                  .flex.flex-col.pr-12
+                    .page-title.leading-tight
+                      {{title}}
 
-            %table.list-table.link-list.object-list.table.table-condensed{style: '{% if not org_perms.links.link_update %}margin-top:10px{% endif %}'}
+                .gear-links
+                  -include "gear_links_include.haml"
+
+            %form#search-form.mb-4(method="get")
+              %temba-textinput.w-full(placeholder='{% trans "Search" %}' name="search" value="{{search}}")
+
+              -if search_error
+                .mb-4.ml-2
+                  %span.search-error
+                    =search_error
+              -elif search
+                .mb-4.ml-1.text-base.leading-relaxed
+                  -blocktrans with results_count=paginator.count|intcomma count cc=paginator.count
+                    Found {{ results_count }} contact matching <i>{{search}}</i>.
+                    -plural
+                      Found {{ results_count }} contacts matching <i>{{search}}</i>.
+
+            %table.list.object-list.lined.selectable
+              %tr.links
+                -if org_perms.links.link_update
+                  %th
+                %th
+                %th
               %tbody
                 -for object in object_list
                   -with object.get_and_clear_unread_responses as new_responses
-                    %tr.link.object-row.select-row{ data-object-uuid: "{{object.uuid}}", data-object-id: "{{ object.id }}" }
-                      %td.link.checkbox.object-row-checkbox
-                        .glyph.icon-checkbox-unchecked.link-checkbox.object-row-checkbox
-
+                    %tr.contact.select-row.object-row(data-uuid="{{object.uuid}}" data-object-id="{{object.id}}" onrowclick='handleRowClicked("{{object.uuid}}")')
+                      - if org_perms.contacts.contact_update or org_perms.msgs.broadcast_send
+                        %td.link.checkbox.object-row-checkbox
+                          %temba-checkbox(onclick="handleRowSelection(this)")
                       %td.value-name
-
-                        {{ object.name }}
+                        = object.name
 
                       -if not object.clicks_count
                         %td.value-status
@@ -94,50 +106,17 @@
                     %td.link
                       -trans "No matching links."
 
-            - block paginator
-              - if object_list.count
-                .paginator
-                  - include "smartmin/sidebar_pagination.haml"
+            .flex.flex-col.mb-16
+              -include "includes/pagination.haml"
+
+              -if paginator.is_es_search and not page_obj.has_next_page and page_obj.number == paginator.num_pages and paginator.count > 10000
+                .text-gray-400.text-sm.self-end.mt-2
+                  -trans "To view more than 10,000 search results, save it as a group."
 
 -block extra-script
   {{ block.super }}
 
   :javascript
-
-    {% if org_perms.links.link_update %}
-
-    function postLabelChanges(linksIds, labelId, addLabel, number, onError) {
-
-         fetchPJAXContent("", "#pjax", { postData: { objects: linksIds, label: labelId, add: addLabel, action: 'label', pjax: 'true', number:number },
-
-         forceReload: true, onSuccess: function(data, textStatus) {
-
-           // if there is a live modal, hide it
-           var modal = $("#active-modal");
-           if ((modal).is(":visible")) {
-             modal.data('object').dismiss();
-           }
-
-           $("#pjax").html(data);
-           recheckIds();
-         }, onError: onError});
+    function handleRowClicked(uuid) {
+      gotoLink("/link/read/" + uuid + "/");
     }
-
-    {% endif %}
-
-    $(document).ready( function() {
-
-      $(document).on('click', 'tr.link td:nth-child(n+2)', function(e){
-         document.location = '/link/read/' + $(this).parent().data("object-uuid");
-      });
-
-      {% if org_perms.links.link_create %}
-      $(".create_link").live('click', function() {
-        var modal = new Modax('{% trans "Create Trackable Link" %}', '{% url "links.link_create" %}');
-        modal.setIcon('icon-easy');
-        modal.setRedirectOnSuccess(true);
-        modal.show();
-      });
-      {% endif %}
-
-    });
