--- a/templates/links/link_read.haml
+++ b/templates/links/link_read.haml
@@ -17,46 +17,14 @@
     .link-destination
       %span.link-destination
         {{ link.destination }}
-  
-   %div.header-margin{style: "margin-left: 0"}
+
+    %div.header-margin{style: "margin-left: 0"}
       -if link.related_flow and link.related_flow.is_active and not link.related_flow.is_archived
         %span.realated-flow{id:"id_flow_{{ link.related_flow.id }}"}
-          %a.btn.btn-primary.btn-mini{href:"{% url 'flows.flow_editor_next' link.related_flow.uuid %}"}
+          %a.btn.button-primary.btn-mini{href:"{% url 'flows.flow_editor_next' link.related_flow.uuid %}"}
             = link.related_flow.name
 
--block above-bar
-  -block top-form
-    %form.search{method:'get'}
-      %input.input-medium.search-query{'type':'text', 'placeholder':'{% trans "Search" %}', 'name':"search", 'value':"{{ request.GET.search }}"}
-
-    - if org_perms.links.link_update or org_perms.links.link_export
-      #gear-container
-        %span.btn-group.gear-menu
-          %button.btn.dropdown-toggle{'data-toggle': 'dropdown', 'data-original-title': '', 'title': ''}
-            %div.glyph.icon-cog
-            %span.caret
-          %ul.dropdown-menu.label-menu{'role': 'menu', 'aria-labelledby': 'dlabel'}
-            - if org_perms.links.link_update
-              %li.dynamic-item
-                %a{'href': '#', 'data-success-url': '', 'class': 'update-link', 'data-original-title': '', 'title': ''}
-                  -trans "Edit"
-            -if org_perms.links.link_export
-              %li.dynamic-item
-                %a{'href': '{% url "links.link_export" link.pk %}', 'data-success-url': '', 'class': 'posterize'}
-                  -trans "Export"
-              
-
--block read-buttons
-
 -block content
-
-  // Needed for table wrapping on IE 9
-  <!--[if IE]>
-  <style>
-    table.activity { table-layout: fixed; }
-  </style>
-  <![endif]-->
-
   %h5
     -trans "Contacts"
   %table.activity.history{style:'padding:0;margin:0'}
@@ -87,33 +55,8 @@
     {% lessblock %}
       :plain
 
-        @media (max-width: 1380px) {
-          #gear-container {
-            .gear-menu {
-              .btn {
-                padding: 8px 10px;
-              }
-            }
-          }
-        }
-
         .icon-user {
           color: #999;
-        }
-
-        form.search {
-          display: inline-block;
-        }
-
-        input.search-query {
-          margin: 0;
-
-          @media (max-width: 1380px) {
-            width: 160px !important;
-          }
-          @media (max-width: 1120px) {
-            width: 118px !important;
-          }
         }
 
         .show-all {
