--- a/templates/campaigns/campaignevent_read.haml
+++ b/templates/campaigns/campaignevent_read.haml
@@ -143,29 +143,7 @@
 
 -block extra-script
   {{block.super}}
-  -if org_perms.flows.flow_update
-    :javascript
-      {% if org_perms.campaigns.campaignevent_update %}
-        $(".update-event").live('click', function(){
-          var modal = new Modax('Update Event', '{% url "campaigns.campaignevent_update" object.pk %}');
-          modal.setIcon('icon-instant');
-          modal.setRedirectOnSuccess(true);
-          modal.setListeners({
-            onPrimary: function() {
-              var form = modal.ele.find('form');
-              var error = validateFlowParams(form);
-              if (error) {
-                modal.focusFirstInput();
-                var divForm = $('.modal-body').find('input.invalid');
-                $('.modal-body').scrollTop(divForm[0].offsetTop - 10);
-              } else {
-                modal.submit();
-              }
-            }
-          }, false);
-          modal.show();
-        });
-      {% endif %}
+  %script{src:"{{ STATIC_URL }}js/flow-parameters.js"}
 
 -block extra-less
   -compress css
