--- a/templates/flows/flow_launch.haml
+++ b/templates/flows/flow_launch.haml
@@ -1,108 +1,12 @@
--extends 'smartmin/form.html'
+-extends 'includes/modax.html'
 -load smartmin
 -load i18n
 
 -block fields
-  %link{type:'text/css', rel:'stylesheet', href:"{{ STATIC_URL }}css/bootstrap-datetimepicker.min.css", media:'all'}
-  %link{type:'text/css', rel:'stylesheet', href:"{{ STATIC_URL }}fonts/awesome/css/font-awesome.min.css", media:'all'}
-
-  %style
-    :plain
-      .modal .modal-body .control-label {
-        display:none;
-      }
-
-      .modal .modal-body .controls {
-        margin-top: 6px;
-      }
-
-      .start-options {
-        margin-top: 10px;
-        color: #666;
-      }
-
-      .start-options .form-group {
-        margin-top: -15px;
-      }
-
-      .start-options > .font-checkbox > .controls > .help-block > label {
-        color: #666 !important;
-      }
-
-      .select2-container {
-        width: 100% !important; 
-      }
-
-      #start-datetime {
-        width: 100%;
-      }
-
-      .col-md-6 {
-        width: 48%;
-      }
-
-      .datepicker {
-        float: left;
-      }
-
-      .timepicker {
-        float: right;
-        margin: 50px 0 0 0;
-      }
-
-      .bootstrap-datetimepicker-widget table td {
-        width: 40px;
-        height: 40px;
-        line-height: 40px;
-      }
-
-      .bootstrap-datetimepicker-widget table td.separator {
-        width: 20px;
-      }
-
-      .bootstrap-datetimepicker-widget .timepicker-hour, .bootstrap-datetimepicker-widget .timepicker-minute, .bootstrap-datetimepicker-widget .timepicker-second {
-        width: 40px;
-        height: 40px;
-        line-height: 40px;
-      }
-
-      .bootstrap-datetimepicker-widget a[data-action] {
-        padding: 0;
-      }
-
-      .timepicker-picker a.btn {
-        background-color: transparent !important;
-        border: none;
-        background-image: none;
-        box-shadow: none;
-      }
-
-      .timepicker-picker a.btn span {
-        line-height: 40px;
-        height: 40px;
-        width: 45px;
-        background-color: transparent !important;
-      }
-
-      .weekly-repeat-options .btn-group .btn {
-        margin: 2px;
-        border-radius: 5px;
-      }
-
-      .weekly-repeat-options .btn-group .btn.active {
-        color: #e6e6e6;
-        background-color: #569D9B;
-      }
-
-      .bootstrap-datetimepicker-widget table td.active, .bootstrap-datetimepicker-widget table td.active:hover {
-        background-color: #569D9B;
-        color: #FFFFFF;
-      }
-
   -if object.flow_type == 'M' and not send_channel
     %p
     -blocktrans with name=brand.name
-      To get started you need to add a channel to your account. A channel is a phone number or social network
+      To get started you need to add a channel to your workspace. A channel is a phone number or social network
       account which {{ name }} can use to send and receive messages on your behalf. You can choose to use an
       Android phone and your own cell phone plan, or we can connect you with a service provider in your country
       directly.
@@ -114,89 +18,51 @@
 
   -elif object.flow_type == 'V' and not call_channel
     %p
-      -blocktrans with name=brand.name
-        To get started you need to add a voice-enabled channel to your account. A voice-enabled channel is a
+      -blocktrans trimmed with name=brand.name
+        To get started you need to add a voice-enabled channel to your workspace. A voice-enabled channel is a
         phone number which {{ name }} can use to make and receive phone calls on your behalf. For example, Twilio
-        is a service which provides voice-enabled numbers which you can add as channels in your {{ name }} account.
+        is a service which provides voice-enabled numbers which you can add as channels in your {{ name }} workspace.
 
   -else
+    -if warnings
+      -for warning in warnings
+        .mb-4
+          %temba-alert{level: "warning"}
+            %div= warning
+
     .field
       - render_field 'launch_type'
 
-    .field.start-type.l-immediately
-      - render_field 'start_type'
+    .l-immediately
+      .field.start-type
+        - render_field 'start_type'
 
-    -#.field.omnibox.l-immediately.l-schedule
-    -#  - render_field 'omnibox'
+      .field.omnibox{class:'{% if not form.start_type.value == "select" %}hidden{%endif%}'}
+        - render_field 'omnibox'
 
-    .field.contact-query.l-immediately
-      - render_field 'contact_query'
+      .field.contact-query{class:'{% if form.start_type.value == "select" %}hidden{%endif%}'}
+        - render_field 'contact_query'
 
-    .start-options.l-immediately
-      .control-group.restart-participants
-        %label.control-label{ for:"id_restart_participants" }
-          -trans "Restart Participants"
-        .controls
-          %input#id_restart_participants{ name:"restart_participants", type:"checkbox" }
-            .help-block
-              %label{ for:"id_restart_participants" }
-                -trans "Restart contacts who have already entered this flow"
+      .start-options.mt-6.ml-2
+        - render_field 'restart_participants'
+        - render_field 'include_active'
 
-      .control-group.include-active
-        %label.control-label{ for:"id_include_active" }
-          -trans "Include Active Contacts"
-        .controls
-          %input#id_include_active{ name:"include_active", type:"checkbox" }
-            .help-block
-              %label{ for:"id_include_active" }
-                -trans "Interrupt contacts currently active in flows"
+        -if flow_params_fields
+          .control-group
+            %h5
+              -trans "Flow Parameters"
 
-      -if flow_params_fields
-        .control-group
-          %h5
-            -trans "Flow Parameters"
+            #embedded-data
+              .embed-container
+                -for flow_param_field in flow_params_fields
+                  .embed-row.embed-template
+                    .embed-field
+                      - render_field flow_param_field.0
+                    .embed-value
+                      - render_field flow_param_field.1
 
-          #embedded-data
-            .embed-container
-              -for flow_param_field in flow_params_fields
-                .embed-row.embed-template
-                  .embed-field
-                    - render_field flow_param_field.0
-                  .embed-value
-                    - render_field flow_param_field.1
-
-    .l-keyword
-      - render_field 'keyword_triggers'
-
-    .l-schedule
-      #schedule-options
-        %label.schedule-options-label{for:"later-option"}
-        #start-datetime{ name:'start_datetime', disabled:'true', value:'{% trans "Select a date" %}'}
-        %input#start-datetime-value{type:'hidden', name:'start_datetime_value', value:''}
-        %input#later-option{type:'hidden', name:'start',value:'later'}
-
-      #recurrence
-        .repeat-period
-          %p.instructions
-            -render_field 'repeat_period'
-        .weekly-repeat-options{class:'{% if form.repeat_period.value == "W" %}{% else%}hide{%endif%}'}
-          .btn-group.week{'data-toggle':'buttons-checkbox'}
-            #mon.btn{value:"M", class:'{% if "M" in form.repeat_days_of_week.value %}active{% endif %}'}
-              -trans "Mon"
-            #tue.btn{value:"T", class:'{% if "T" in form.repeat_days_of_week.value %}active{% endif %}'}
-              -trans "Tue"
-            #wed.btn{value:"W", class:'{% if "W" in form.repeat_days_of_week.value %}active{% endif %}'}
-              -trans "Wed"
-            #thu.btn{value:"R", class:'{% if "R" in form.repeat_days_of_week.value %}active{% endif %}'}
-              -trans "Thu"
-            #fri.btn{value:"F", class:'{% if "F" in form.repeat_days_of_week.value %}active{% endif %}'}
-              -trans "Fri"
-            #sat.btn{value:"S", class:'{% if "S" in form.repeat_days_of_week.value %}active{% endif %}'}
-              -trans "Sat"
-            #sun.btn{value:"U", class:'{% if "U" in form.repeat_days_of_week.value %}active{% endif %}'}
-              -trans "Sun"
-
-          %input#repeat-days-value{name:'repeat_days_of_week', type:'hidden', value:'{{form.repeat_days_of_week.value|default:""}}'}
+    .loader.hidden
+      %img{src:"{{STATIC_URL}}images/loader-circles.gif"}
 
     -if warnings
       %div.warning
@@ -205,86 +71,6 @@
 
         %p
           -trans "You may still start this flow but WhatsApp contacts who have not sent an incoming message in the last 24 hours may not receive it."
-    
-    %script{src:"{% url 'django.views.i18n.javascript_catalog' %}"}
-    %script{src:"{{ STATIC_URL }}js/bootstrap-datetimepicker.min.js"}
-    %script{src:"{{ STATIC_URL }}js/schedules-ui.js?v=3"}
-    :javascript
-      var user_tz = "{{ user_tz }}";
-      var user_tz_offset = "{{ user_tz_offset }}";
-      var launchSelector = $('#id_launch_type');
-      var startFlowTypeSelector = $('#id_start_type');
-      var launchImmediatelyBox = $('.l-immediately');
-      var launchOnKeywordTriggerBox = $('.l-keyword');
-      var launchOnScheduleTriggerBox = $('.l-schedule');
-      var repeatPeriodSelector = $('#id_repeat_period');
-
-      launchSelector.select2({containerCssClass: "select2-temba-field", minimumResultsForSearch: -1});
-      startFlowTypeSelector.select2({containerCssClass: "select2-temba-field", minimumResultsForSearch: -1});
-      repeatPeriodSelector.select2({containerCssClass: "select2-temba-field", minimumResultsForSearch: -1});
-
-      function showFieldsOnStartType(selected) {
-        let omnibox = $(".omnibox");
-        let query = $(".contact-query");
-        if (selected === 'query') {
-          omnibox.hide();
-          query.show();
-        } else {
-          query.hide();
-          omnibox.show();
-        }
-      }
-
-      showFieldsOnStartType(startFlowTypeSelector.val());
-      startFlowTypeSelector.change(function (){showFieldsOnStartType($(this).val());});
-
-      function showLaunchFlowBox(selected) {
-        launchImmediatelyBox.hide();
-        launchOnKeywordTriggerBox.hide();
-        launchOnScheduleTriggerBox.hide();
-        switch(selected) {
-          case "LAUNCH_IMMEDIATELY":
-            launchImmediatelyBox.show();
-            showFieldsOnStartType(startFlowTypeSelector.val());
-            break;
-          case "LAUNCH_ON_KEYWORD_TRIGGER":
-            window.location.href = "{% url 'triggers.trigger_create' %}?trigger=keyword&flow={{flow.id}}"
-            $('.modal-body>.loader').show();
-            break;
-          case "LAUNCH_ON_SHEDULE_TRIGGER":
-            window.location.href = "{% url 'triggers.trigger_create' %}?trigger=schedule&flow={{flow.id}}"
-            $('.modal-body>.loader').show();
-            break;
-        }
-      };
-
-      showLaunchFlowBox(launchSelector.val());
-      launchSelector.change(function() {showLaunchFlowBox($(this).val())});
-
-      $('#id_match_type').select2({containerCssClass: "select2-temba-field", minimumResultsForSearch: -1});
-      $('#id_groups').select2({
-        containerCssClass: "select2-temba-field"
-      });
-
-      $(document).ready(function() {
-        var minDate = new Date();
-        var minutes = minDate.getMinutes();
-        if (minutes > 0) {
-            minDate.setMinutes(0);
-            minDate.setHours(minDate.getHours() + 1);
-        }
-        initializeBootstrapDatetimePicker(minDate, undefined, false);
-      });
-
-      function updateDailySelection() {
-        var selected = '';
-        $('.btn-group.week > .btn').each(function() {
-            if ($(this).hasClass('active')) {
-                selected += $(this).attr('value');
-            }
-        });
-        $('#repeat-days-value').val(selected);
-      }
 
 -block form-buttons
   -if send_channel
@@ -313,23 +99,112 @@
 
 -block extra-script
   {{ block.super }}
-  :javascript
+
+-block modal-extra-style
+  {{ block.super }}
+  :css
+    .loader {
+      display: flex;
+      justify-content: center;
+    }
+
+    .embedded-data-update {
+      margin: 0 0 5px 4px;
+      font-weight: 400;
+      font-size: 13px;
+      letter-spacing: 0.05em;
+      line-height: normal;
+      color: rgb(119, 119, 119);
+    }
+
+    .embed-row {
+      display: flex;
+    }
+
+    .embed-field, .embed-value {
+      width: 49%;
+      margin: 0 5px 5px 0;
+    }
+
+    .embed-field > input, .embed-value > input {
+      width: calc(100% - 18px);
+      font-size: 13px;
+      padding: 7px;
+      border-radius: var(--curvature-widget);;
+      border: 1px solid var(--color-widget-border);
+      color: var(--color-widget-text);
+      outline: none;
+    }
+
+    .embed-field > input:read-only {
+      background: #eee;
+    }
+
+    .embed-value > input:focus {
+      background: var(--color-widget-bg-focused);
+      border-color: var(--color-focus);
+      box-shadow: var(--widget-box-shadow-focused);
+    }
+
+    .hidden {
+      display: none;
+    }
 
 -block modal-script
   {{block.super}}
   :javascript
-    $(document).ready(function () {
-      useFontCheckbox("#id_restart_participants");
-      useFontCheckbox("#id_include_active");
-    });
-    
-    prepareOmnibox();
-    $("#id_keyword_triggers").select2({
-      tags: [],
-      tokenSeparators: [",", " "],
-      minimumResultsForSearch: -1,
-      placeholder: "Add a keyword to begin this flow",
-      containerCssClass: "select2-temba-field"
-    });
+    function addClass(ele, className) {
+      ele.classList.add(className);
+    }
+
+    function removeClass(ele, className) {
+      ele.classList.remove(className);
+    }
+
+    var modalBody = document.querySelector("#launch-flow").shadowRoot
+
+    var queryField = modalBody.querySelector('.contact-query');
+    var recipientsField = modalBody.querySelector('.omnibox');
+    var modeSelect = modalBody.querySelector("temba-select[name='start_type']");
+
+    if (modeSelect) {
+      modeSelect.addEventListener("change", function(evt) {
+        var selected = evt.target.values[0];
+        if (selected.value === "query") {
+          removeClass(queryField, "hidden");
+          addClass(recipientsField, "hidden");
+        } else {
+          addClass(queryField, "hidden");
+          removeClass(recipientsField, "hidden");
+        }
+      });
+    }
+
+    var typeSwitcher = modalBody.querySelector("#id_launch_type");
+    var launchImmediatelyBox = modalBody.querySelector(".l-immediately");
+    var loader = modalBody.querySelector(".loader");
+    function showLaunchFlowBox(selected) {
+      addClass(launchImmediatelyBox, "hidden");
+      addClass(loader, "hidden");
+      switch(selected) {
+        case "LAUNCH_IMMEDIATELY":
+          removeClass(launchImmediatelyBox, "hidden");
+          // showFieldsOnStartType(startFlowTypeSelector.val());
+          break;
+        case "LAUNCH_ON_KEYWORD_TRIGGER":
+          // window.location.href = "{% url 'triggers.trigger_create' %}?trigger=keyword&flow={{flow.id}}"
+          removeClass(loader, "hidden");
+          break;
+        case "LAUNCH_ON_SHEDULE_TRIGGER":
+          // window.location.href = "{% url 'triggers.trigger_create' %}?trigger=schedule&flow={{flow.id}}"
+          removeClass(loader, "hidden");
+          break;
+        }
+      }
+
+      typeSwitcher.addEventListener("change", function (event) {
+        let type = event.target.values[0].value;
+        showLaunchFlowBox(type);
+      });
 
 -load humanize    
