--- a/templates/triggers/trigger_schedule.haml
+++ b/templates/triggers/trigger_schedule.haml
@@ -33,7 +33,12 @@
     .repeat-period
       -render_field 'repeat_period'
     .weekly-repeat-options{class:'{% if form.repeat_period.value == "W" %}{% else%}hidden{%endif%}'}
-      -render_field 'repeat_days_of_week'    
+      -render_field 'repeat_days_of_week'
+  %h5.embedded-data-schedule.hidden
+    -trans "Flow Parameters"
+  #embedded-data-schedule.hidden
+    #embed-container-schedule
+
 
 -block summary
   -trans "Start a flow in the future or on a schedule."
