--- a/templates/orgs/org_parse_data_view.haml
+++ b/templates/orgs/org_parse_data_view.haml
@@ -87,7 +87,7 @@
   {{block.super}}
 
 -block table
-  %table{class: "list_orgs_org list-table table table-striped", cellspacing:"0"}
+  %table.list.object-list.lined{class: "list_orgs_org list-table table table-striped", cellspacing:"0"}
     %thead
       %tr
         -for field in fields
