--- a/templates/flows/flow_editor.haml
+++ b/templates/flows/flow_editor.haml
@@ -181,6 +181,15 @@
       margin-bottom: 0;
     }
 
+    .top-bar {
+      background-color: #f9f9f9;
+      background-position: 13px 13px;
+      background-image: linear-gradient(0deg, transparent 24%, rgba(61,177,255,0.15) 25%, rgba(61,177,255,0.15) 26%, transparent 27%, transparent 74%, rgba(61,177,255,0.15) 75%, rgba(61,177,255,0.15) 76%, transparent 77%, transparent),linear-gradient(90deg, transparent 24%, rgba(61,177,255,0.15) 25%, rgba(61,177,255,0.15) 26%, transparent 27%, transparent 74%, rgba(61,177,255,0.15) 75%, rgba(61,177,255,0.15) 76%, transparent 77%, transparent);
+      background-size: 40px 42px;
+      margin-top: 0px;
+      padding-bottom: 0px;
+    }
+
 -block extra-script
   {{ block.super }}
 
