Contact import fix

--- a/static/less/legacy.less
+++ b/static/less/legacy.less
@@ -816,15 +816,12 @@ table.list-table {
         a {
           font-size: 28px;
           color: @color-navlink;
-          padding-top: 5px;
-          display: inline-block;
-          width: 50px;
-          height: 50px;
-          // border: 1px solid red;
-          position: relative;
-          margin-bottom: 10px;
-          margin-top: 10px;
-          margin-left: 0px;
+          margin: 0;
+          padding: 10px 0;
+          width: 100%;
+          display: flex;
+          justify-content: center;
+          align-items: center;
 
           .title {
             border: 0px solid green;
